--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-pwa": "^5.6.0",
     "react": "19.0.0-rc-65a56d0e-20241020",
     "react-dom": "19.0.0-rc-65a56d0e-20241020",
+    "sitemap": "^8.0.0",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
